--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,10 @@
 services:
   tigerbeetle:
-    image: ghcr.io/tigerbeetledb/tigerbeetle:latest
-    command: >
-      start --addresses=0.0.0.0:3000
-             --replica=0
-             --replica-count=1
-             --cluster=0
-             --storage=/etc/tb/0_0.tigerbeetle
+    image: ghcr.io/tigerbeetle/tigerbeetle
+    command: start --addresses=0.0.0.0:3001 --replica=0 --replica-count=1 /data/0_0.tigerbeetle
     ports:
-      - "3000:3000"
+      - "3001:3001"
     volumes:
-      - ./0_0.tigerbeetle:/etc/tb/0_0.tigerbeetle
+      - ./data:/data
+    security_opt:
+      - seccomp=unconfined
